--- a/README.Rmd
+++ b/README.Rmd
@@ -20,8 +20,9 @@ Talks, pitches, journal club presentations, almost organized. But not really, le
 ```{r}
 tibble::tribble(
   ~year, ~short, ~desc, ~link,
+  2024, "surv-bench-statcomp", "StatComp: Survival Benchmark", "2024/07-statcomp/survbench.pdf",
   2024, "BioWiMium", "Demsar 2006", "2024/05-biowimium/index.pdf",
-  2024, "surv-bench", "Biometric Colloquium 2024: Survival Benchmark", "2024/02-biocoll/01MAR24_Lukas_Burk.pdf",
+  2024, "surv-bench-bioc", "Biometric Colloquium 2024: Survival Benchmark", "2024/02-biocoll/01MAR24_Lukas_Burk.pdf",
   2023, "CooPeR", "CEN 2023: CooPeR", "2023/09-cooper/07SEP23_Lukas_Burk.pdf",
   2023, "BioWiMium", "Generating High-Dimensional Competing Risk Survival Settings", "2023/06-wimium/cr.pdf",
   2023, "CooPeR", "fwelnet for survival w/ competing risks, again, but... more. And renamed.", "2023/05-cooper/CooPeR.html",
