--- a/2024/07-statcomp/beamerthemeBIPS.sty
+++ b/2024/07-statcomp/beamerthemeBIPS.sty
@@ -183,7 +183,7 @@
 	\node[align=center, color=BIPSBlue] at (\paperwidth*.5, 8) {\Large \textbf{#1}};
 
 	\node[align=center] at (\paperwidth*.5, 6) {
-	  % {\small \textbf{Slides:}}
+	  %%{\small \textbf{Slides:}}
 	  \includegraphics[width=0.2\textwidth]{qr.png}
 	};
 
