--- a/README.Rmd
+++ b/README.Rmd
@@ -21,14 +21,14 @@ Talks, pitches, journal club presentations, almost organized. But not really, le
 tibble::tribble(
   ~year, ~short, ~desc, ~link,
   2024, "surv-bench-statcomp", "StatComp: Survival Benchmark", "2024/07-statcomp/survbench.pdf",
-  2024, "BioWiMium", "Demsar 2006", "2024/05-biowimium/index.pdf",
+  # 2024, "BioWiMium", "Demsar 2006", "2024/05-biowimium/index.pdf",
   2024, "surv-bench-bioc", "Biometric Colloquium 2024: Survival Benchmark", "2024/02-biocoll/01MAR24_Lukas_Burk.pdf",
-  2023, "CooPeR", "CEN 2023: CooPeR", "2023/09-cooper/07SEP23_Lukas_Burk.pdf",
-  2023, "BioWiMium", "Generating High-Dimensional Competing Risk Survival Settings", "2023/06-wimium/cr.pdf",
-  2023, "CooPeR", "fwelnet for survival w/ competing risks, again, but... more. And renamed.", "2023/05-cooper/CooPeR.html",
-  2022, "aorsf", "ORSF, but A (survival focus group)", "2022/aorsf/aorsf.html",
-  2022, "xai-bench", "XAI-Bench / Journal Club BIPS/SLDS", "2022/imljc-xaibench/index.html",
-  2022, "fwelnet-cr", "fwelnet for survival outcomes with competing risks (idea/pitch)", "2022/fwelnet-cr/fwelnet-cr.html"
+  2023, "CooPeR", "CEN 2023: CooPeR", "2023/09-cooper/07SEP23_Lukas_Burk.pdf"
+  # 2023, "BioWiMium", "Generating High-Dimensional Competing Risk Survival Settings", "2023/06-wimium/cr.pdf",
+  # 2023, "CooPeR", "fwelnet for survival w/ competing risks, again, but... more. And renamed.", "2023/05-cooper/CooPeR.html",
+  # 2022, "aorsf", "ORSF, but A (survival focus group)", "2022/aorsf/aorsf.html",
+  # 2022, "xai-bench", "XAI-Bench / Journal Club BIPS/SLDS", "2022/imljc-xaibench/index.html",
+  # 2022, "fwelnet-cr", "fwelnet for survival outcomes with competing risks (idea/pitch)", "2022/fwelnet-cr/fwelnet-cr.html"
 ) |>
   dplyr::mutate(
     desc = glue::glue("<a href='{link}'>{desc}</a>")
