Add dagstat rpf talk to index

--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,8 @@ Talks, pitches, journal club presentations, almost organized. But not really, le
 ```{r}
 tibble::tribble(
   ~year, ~short, ~desc, ~link,
-  2024, "surv-bench-statcomp", "StatComp: Survival Benchmark", "2024/07-statcomp/survbench.pdf",
+  2025, "rpf", "DAGStat 2025: Random Planted Forests", "2025/03-dagstat/rpf.pdf",
+  2024, "surv-bench-statcomp", "StatComp 2024: Survival Benchmark", "2024/07-statcomp/survbench.pdf",
   # 2024, "BioWiMium", "Demsar 2006", "2024/05-biowimium/index.pdf",
   2024, "surv-bench-bioc", "Biometric Colloquium 2024: Survival Benchmark", "2024/02-biocoll/01MAR24_Lukas_Burk.pdf",
   2023, "CooPeR", "CEN 2023: CooPeR", "2023/09-cooper/07SEP23_Lukas_Burk.pdf"
@@ -37,4 +38,3 @@ tibble::tribble(
   kableExtra::kbl(col.names = c("Year", "Topic", "Context"), escape = FALSE) |>
   kableExtra::kable_styling(full_width = TRUE)
 ```
-
