--- a/2025/03-dagstat/tree-planted-large.tex
+++ b/2025/03-dagstat/tree-planted-large.tex
@@ -65,13 +65,13 @@
   % Connection from Node 8
   \draw [arrow] (l) -- (n);
 
-  % Nodes from second x3 split
-  \node (o) [interaction, below left=1cm and 0.1cm of n, text width=1.7cm, align=center] {Node 10\\Type: $x_1,x_3$};
-  \node (p) [interaction, below right=1cm and 0.1cm of n, text width=1.7cm, align=center] {Node 11\\Type: $x_1,x_3$};
+  % % Nodes from second x3 split
+  % \node (o) [interaction, below left=1cm and 0.1cm of n, text width=1.7cm, align=center] {Node 10\\Type: $x_1,x_3$};
+  % \node (p) [interaction, below right=1cm and 0.1cm of n, text width=1.7cm, align=center] {Node 11\\Type: $x_1,x_3$};
 
-  % Connections from second x3 split
-  \draw [arrow] (n) -- node[label, left] {Yes} (o);
-  \draw [arrow] (n) -- node[label, right] {No} (p);
+  % % Connections from second x3 split
+  % \draw [arrow] (n) -- node[label, left] {Yes} (o);
+  % \draw [arrow] (n) -- node[label, right] {No} (p);
 
   % Legend - moved to the right side, stacked vertically
   % \node (legend) [above right=0cm and 0.5cm of root, font=\bfseries, anchor=west] {Legend:};
